<resources>
    <string name="app_name">Bookland</string>
    <string name="txt_email">Correo</string>
    <string name="txt_password">Constraseña</string>
    <string name="txt_btn_ok">Aceptar</string>
    <string name="txt_birth_date">Fecha de nacimiento</string>
    <string name="txt_sex">Sexo</string>
    <string name="txt_woman">Femenino</string>
    <string name="txt_men">Masculino</string>
    <string name="txt_next">Siguiente</string>
    <string name="txt_create_account">Registrarse</string>
    <string name="txt_edit_shelfs">Editar libreros</string>
    <string name="txt_edit_profile">Editar perfil</string>
    <string name="txt_exit">Salir</string>
    <string name="txt_my_genders">Mis géneros</string>
    <string name="txt_my_genders_instructions">Selecciona los géneros de los cuales deseas obtener recomendaciones</string>
    <string name="txt_home">Mis libros</string>
    <string name="txt_want_to_read">Quiero leer</string>
    <string name="txt_not_interested">No me interesa</string>
    <string name="txt_btn_save">Guardar</string>
    <string name="txt_btn_see_more">Ver más</string>
    <string name="txt_my_authors">Mis autores favoritos</string>
    <string name="txt_transaction_error">Error de transacción</string>
    <string name="txt_all_fields_required">Todos los campos son obligatorios</string>
    <string name="txt_error_load_activity">Error al cargar la actividad</string>
    <string name="txt_error_password">Contraseña incorrecta</string>
    <string name="txt_error_user">Usuario incorrecto</string>
    <string name="txt_recommendations">Recomendaciones</string>
    <string name="txt_shelfs">Libreros</string>
    <string name="txt_new_shelf">Nuevo librero</string>
    <string name="txt_ok">Guardar</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_email_cannot_be_repeated">Ya existe un usuario con el email ingresado</string>
    <string name="txt_user_registered">Usuario registrado</string>
    <string name="txt_my_authors_instructions">Seleccione sus autores favoritos</string>
    <string name="txt_author">Autor</string>
    <string name="txt_successful_message">Operación exitosa</string>
    <string name="txt_wirte_an_autor">Ingrese el nombre de un autor</string>
    <string name="txt_edit_fave_authors">Configuración de favoritos</string>
    <string name="txt_btn_next">Siguiente</string>
    <string name="txt_avg">Promedio</string>
    <string name="txt_page_number">No. de páginas</string>
    <string name="txt_narrating">Narración</string>
    <string name="txt_pov">Múltiples POV</string>
    <string name="txt_tags">Tags</string>
    <string name="txt_no_recommendations">No tenemos recomendaciones para ti de momento</string>
    <string name="txt_configure_fav_genders">Configura tus \"Favoritos\" para poder obtener recomendaciones</string>
    <string name="txt_yes">OK</string>
    <string name="txt_name_cannot_be_repeated">El nombre del librero no puede repetirse</string>
    <string name="txt_would_like_to_do">¿Qué desea hacer?</string>
    <string name="txt_delete_shelfs">Eliminar</string>
    <string name="txt_edit">Editar</string>
    <string name="txt_book_shelfs">Libreros</string>
    <string name="txt_shelfs_instructions">Selecciona los libreros a los que quieres que el libro pertenezca</string>
    <string name="txt_default_shelf">Leídos</string>
    <string name="txt_you_need_internet">Sin acceso a internet. Necesitas conexión para usar la aplicación.</string>
    <string name="hint_min">Mínimo</string>
    <string name="hint_max">Máximo</string>
    <string name="txt_gender">Género</string>
    <string name="txt_subgender">Subgénero</string>
    <string name="txt_multiple_pov">Múltiples POV</string>
    <string name="txt_target_age">Tipo</string>
    <string name="txt_first_person">Primera persona</string>
    <string name="txt_third_person">Tercera persona</string>
    <string name="txt_select">Seleccionar</string>
    <string name="txt_children">Infantil</string>
    <string name="txt_ya">Juvenil</string>
    <string name="txt_na">New Adult</string>
    <string name="txt_adult">Adulto</string>
    <string name="txt_search">Buscar</string>
    <string name="txt_clean">Limpiar filtros</string>
    <string name="txt_new_book_request">Solicitar agregar libro</string>
    <string name="txt_no_coincidences">Sin coincidencias</string>
    <string name="txt_about_us">Bookland te permite administrar los libros que lees y obtener recomendaciones
    personalizadas de acuerdo a tus preferencias. Puedes administrar los libros que lees o quieres leer creando
    un librero y agregando todos los libros que quieras al mismo. Pueden poner un libro en cuantos libreros quieras.
    En la sección de recomendaciones encontrarás los géneros que tienes marcados como favoritos y te daremos sugerencias
    con base a los mismos. Si estas buscando un libro con ciertas particularidades prueba nuestra búsqueda avanzada.
    Disfruta de la App :)</string>
    <string name="txt_know_our_sucursal">Conoce nuestras oficinas</string>
    <string name="txt_need_permission">Debes aceptar el permiso para realizar esta acción</string>
    <string name="txt_no_app">No tienes una aplicación para realizar esta acción</string>
    <string name="txt_title_about_us">Sobre nosotros</string>
    <string name="txt_no">No</string>
    <string name="txt_yes_string">Sí</string>
    <string name="txt_saga">Ver saga</string>
    <string name="txt_error_request">Ocurrió un problema al cargar los resultados</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_advanced_search">Búsqueda avanzada</string>
    <string name="txt_request_book_add">Solicitar agregar un nuevo libro</string>
    <string name="txt_email_text">Hola, quisiera que agregaran a la aplicación el libro…</string>
    <string name="txt_add_shelfs_to_see">Crea tus libreros en \"Editar Liberos"\ para poder usar esta sección</string>
    <string name="txt_enter_name">Ingrese el nombre del librero</string>
    <string name="txt_no_books_in_shelf">No tienes ningún libro agregado en este librero</string>
</resources>