<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/itmShelf"
        android:title="@string/txt_edit_shelfs"
        app:showAsAction="never"/>
    <item android:id="@+id/itmEditFavAuthors"
        android:title="@string/txt_edit_fave_authors"
        app:showAsAction="never"/>
    <item android:id="@+id/itmRecommendations"
        android:title="@string/txt_recommendations"
        app:showAsAction="never"/>
    <item android:id="@+id/itmAdvancedSearch"
        android:title="@string/txt_search"
        app:showAsAction="never"/>
    <item android:id="@+id/itmNewBookRequest"
        android:title="@string/txt_new_book_request"
        app:showAsAction="never"/>
    <item android:id="@+id/itmAboutUs"
        android:title="@string/txt_title_about_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/itmSimpleSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/txt_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/itmExit"
        android:title="@string/txt_exit"
        app:showAsAction="never"/>
</menu>