<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FavoriteAuthorsActivity">



        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/txt_my_authors_instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtSearchAuthor"
            android:layout_width="276dp"
            android:layout_height="42dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txt_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="HardcodedText"
            android:autofillHints="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rwsAuthors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtSearchAuthor" />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_search_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/edtSearchAuthor"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:background="@color/white"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/primary_btn"
            android:textColor="@color/white"
            android:text="@string/txt_btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rwsAuthors" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>